--- a/css/editor.css
+++ b/css/editor.css
@@ -42,6 +42,17 @@
 .smart-cf-meta-box-table .wp-editor-container {
 	clear: both;
 }
+.smart-cf-meta-box-table td .description {
+	font-size: 12px;
+	margin: 10px 0 0;
+}
+
+/** ==================================================
+ * .smart-cf-meta-box-repeat-tables
+ */
+.smart-cf-meta-box-repeat-tables .smart-cf-meta-box-table > .smart-cf-icon-handle {
+	top: 5px;
+}
 
 /** ==================================================
  * relation
@@ -61,20 +72,22 @@
 }
 .smart-cf-meta-box-table .smart-cf-relation-left ul li,
 .smart-cf-meta-box-table .smart-cf-relation-right ul li {
+	background: #fff;
 	border-bottom: #eee solid 1px;
 	color: #0074a2;
-	cursor: pointer;
 	margin: 0;
 	padding: 5px 10px;
 	position: relative;
 }
-.smart-cf-meta-box-table .smart-cf-relation-left ul li:hover,
-.smart-cf-meta-box-table .smart-cf-relation-right ul li:hover {
-	background: #e4f6fd;
-}
 .smart-cf-meta-box-table .smart-cf-relation-left {
 	float: left;
 	width: 47%;
+}
+.smart-cf-meta-box-table .smart-cf-relation-left ul li {
+	cursor: pointer;
+}
+.smart-cf-meta-box-table .smart-cf-relation-left ul li:hover {
+	background: #e4f6fd;
 }
 .smart-cf-meta-box-table .smart-cf-relation-left .load-relation-posts {
 	background: #e4f6fd;
@@ -91,6 +104,7 @@
 	width: 50%;
 }
 .smart-cf-meta-box-table .smart-cf-relation-right ul li .relation-remove {
+	cursor: pointer;
 	display: block;
 	padding: 2px 8px;
 	position: absolute;
@@ -138,4 +152,18 @@
 .smart-cf-upload-file .btn-remove-file.hide,
 .load-relation-posts.hide {
 	display: none;
+}
+
+/** ==================================================
+ * classes
+ */
+.smart-cf-icon-handle {
+	background: url( ../images/handle.png ) no-repeat;
+	cursor: move;
+	display: inline-block;
+	margin-right: 10px;
+	height: 10px;
+	width: 10px;
+	overflow: hidden;
+	position: relative;
 }
