--- a/css/settings.css
+++ b/css/settings.css
@@ -1,9 +1,9 @@
 /**
  * settings.css
- * Version    : 1.0.0
+ * Version    : 1.0.1
  * Author     : Takashi Kitajima
  * Created    : September 23, 2014
- * Modified   :
+ * Modified   : January 22, 2015
  * License    : GPLv2
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  */
@@ -96,6 +96,8 @@
 	border: #ddd solid 1px;
 	margin: 5px 0 0;
 	padding: 10px;
+	overflow: hidden;
+	*zoom: 1;
 }
 .smart-cf-group .smart-cf-field:first-child {
 	margin-top: 0;
@@ -120,15 +122,29 @@
 }
 
 /**
- * .btn-remove-field
+ * .smart-cf-icon-handle
  */
-.smart-cf-group .smart-cf-field .btn-remove-field {
-	cursor: move;
+.smart-cf-group .smart-cf-field .smart-cf-icon-handle {
+	float: left;
+	margin-top: 4px;
+	margin-right: 8px;
+}
+
+/**
+ * .field-label
+ */
+.smart-cf-group .smart-cf-field .field-label {
+	cursor: pointer;
 	position: relative;
 	overflow: hidden;
 	*zoom: 1;
 }
-.smart-cf-group .smart-cf-field .btn-remove-field b {
+
+/**
+ * .btn-remove-field
+ */
+.smart-cf-group .smart-cf-field .btn-remove-field {
+	cursor: pointer;
 	float: right;
 }
 
@@ -154,4 +170,18 @@
 .smart-cf-group .smart-cf-field.hide,
 .smart-cf-group .smart-cf-field table.hide {
 	display: none;
+}
+
+/** ==================================================
+ * classes
+ */
+.smart-cf-icon-handle {
+	background: url( ../images/handle.png ) no-repeat;
+	cursor: move;
+	display: inline-block;
+	margin-right: 10px;
+	height: 10px;
+	width: 10px;
+	overflow: hidden;
+	position: relative;
 }
