--- a/css/settings.css
+++ b/css/settings.css
@@ -128,6 +128,7 @@
 }
 .smart-cf-group .smart-cf-field table th {
 	font-weight: normal;
+	padding-top: 10px;
 	padding-right: 15px;
 	text-align: left;
 	vertical-align: top;
