--- a/css/editor.css
+++ b/css/editor.css
@@ -86,7 +86,6 @@
 	border: #ddd solid 1px;
 	border-radius: 3px;
 	height: 160px;
-	overflow: auto;
 }
 .smart-cf-meta-box-table .smart-cf-relation-left ul,
 .smart-cf-meta-box-table .smart-cf-relation-right ul {
@@ -106,6 +105,16 @@
 .smart-cf-meta-box-table .smart-cf-relation-left {
 	float: left;
 	width: 47%;
+	overflow: hidden;
+}
+.smart-cf-meta-box-table .smart-cf-relation-left .smart-cf-search {
+	background-color: #f5f5f5;
+	border-bottom: 1px solid #eee;
+	padding: 5px;
+}
+.smart-cf-meta-box-table .smart-cf-relation-left .smart-cf-relation-children-select {
+	overflow: auto;
+	height: 122px;
 }
 .smart-cf-meta-box-table .smart-cf-relation-left ul li {
 	cursor: pointer;
@@ -126,6 +135,7 @@
 .smart-cf-meta-box-table .smart-cf-relation-right {
 	float: right;
 	width: 50%;
+	overflow: auto;
 }
 .smart-cf-meta-box-table .smart-cf-relation-right ul li .relation-remove {
 	cursor: pointer;
