--- a/css/editor.css
+++ b/css/editor.css
@@ -1,10 +1,10 @@
 /**
  * editor.css
- * Version    : 1.1.0
- * Author     : Takashi Kitajima
+ * Version    : 1.2.0
+ * Author     : inc2734
  * Created    : September 23, 2014
- * Modified   : April 24, 2015
- * License    : GPLv2
+ * Modified   : November 12, 2015
+ * License    : GPLv2 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  */
 
