In setting screen, if the field is closed, display the field name.

--- a/css/settings.css
+++ b/css/settings.css
@@ -156,6 +156,10 @@
 	overflow: hidden;
 	*zoom: 1;
 }
+.smart-cf-group .smart-cf-field .field-label small {
+	color: #999;
+	font-size: 90%;
+}
 
 /**
  * .btn-remove-field
