--- a/css/settings.css
+++ b/css/settings.css
@@ -1,9 +1,9 @@
 /**
  * settings.css
- * Version    : 1.0.3
+ * Version    : 1.1.0
  * Author     : inc2734
  * Created    : September 23, 2014
- * Modified   : April 26, 2015
+ * Modified   : May 31, 2016
  * License    : GPLv2 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  */
@@ -180,13 +180,15 @@
  */
 #smart-cf-meta-box-condition-post b,
 #smart-cf-meta-box-condition-profile b,
-#smart-cf-meta-box-condition-taxonomy b {
+#smart-cf-meta-box-condition-taxonomy b,
+#smart-cf-meta-box-condition-options-page b {
 	display: block;
 	margin: 0 0 5px;
 }
 #smart-cf-meta-box-condition-post label,
 #smart-cf-meta-box-condition-profile label,
-#smart-cf-meta-box-condition-taxonomy label {
+#smart-cf-meta-box-condition-taxonomy label,
+#smart-cf-meta-box-condition-options-page label {
 	display: block;
 	margin: 0 0 5px;
 }
