--- a/css/editor.css
+++ b/css/editor.css
@@ -1,9 +1,9 @@
 /**
  * editor.css
- * Version    : 1.3.0
+ * Version    : 1.3.1
  * Author     : inc2734
  * Created    : September 23, 2014
- * Modified   : February 1, 2016
+ * Modified   : June 4, 2016
  * License    : GPLv2 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  */
@@ -38,6 +38,9 @@
 }
 .smart-cf-meta-box-table td label {
 	margin-right: 10px;
+}
+.smart-cf-meta-box-table .wp-editor-tools:after {
+	display: block;
 }
 .smart-cf-meta-box-table .wp-editor-container {
 	clear: both;
