--- a/css/settings.css
+++ b/css/settings.css
@@ -3,7 +3,7 @@
  * Version    : 1.1.0
  * Author     : inc2734
  * Created    : September 23, 2014
- * Modified   : May 31, 2016
+ * Modified   : July 14, 2018
  * License    : GPLv2 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  */
@@ -27,7 +27,7 @@
  */
 .smart-cf-group {
 	background: #f5f5f5;
-	border: #ddd solid 1px;
+	border: #eee solid 1px;
 	margin: 10px 0 0;
 	padding: 10px;
 	position: relative;
@@ -75,6 +75,11 @@
 	position: relative;
 	top: -2px;
 }
+@media (max-width:750px){
+	.smart-cf-group .smart-cf-group-name {
+		max-width:79%;
+	}
+}
 
 /**
  * .smart-cf-group-names
@@ -109,7 +114,7 @@
  */
 .smart-cf-group .smart-cf-field {
 	background: #fff;
-	border: #ddd solid 1px;
+	border: #eee solid 1px;
 	margin: 5px 0 0;
 	padding: 10px;
 	overflow: hidden;
@@ -192,6 +197,69 @@
 	display: block;
 	margin: 0 0 5px;
 }
+
+#smart-cf-meta-box-condition-post .selectivity-multiple-input {
+	box-shadow:none;
+}
+
+#smart-cf-meta-box-condition-post .selectivity-multiple-selected-item {
+	margin-right:5px;
+}
+
+#smart-cf-meta-box-condition-post .selectivity-multiple-selected-item-remove {
+	font-weight:bold;
+	color:#fff;
+}
+
+#smart-cf-meta-box-condition-post .selectivity-multiple-input-container {
+	border: 1px solid #ddd;
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.07);
+	background-color: #fff;
+	color: #32373c;
+	outline: 0;
+	transition: 50ms border-color ease-in-out;
+	border-radius:0px;
+}
+
+#smart-cf-meta-box-condition-post .selectivity-dropdown,
+#smart-cf-meta-box-condition-post .selectivity-result-item:first-child,
+#smart-cf-meta-box-condition-post .selectivity-load-more,
+#smart-cf-meta-box-condition-post .selectivity-result-item:last-child,
+#smart-cf-meta-box-condition-post .selectivity-result-children:last-child .selectivity-result-item:last-child {
+	border-radius:0px;
+}
+
+.smart-cf-group .smart-cf-group-repeat label .ios-ui-select,
+#smart-cf-meta-box-condition-post .ios-ui-select,
+#smart-cf-meta-box-condition-profile .ios-ui-select,
+#smart-cf-meta-box-condition-taxonomy .ios-ui-select,
+#smart-cf-meta-box-condition-options-page .ios-ui-select {
+	height:18px;
+	width:32px;
+	margin-bottom:-5px;
+	position:relative;
+	background:#ddd;
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.07);
+
+}
+
+.smart-cf-group .smart-cf-group-repeat label .ios-ui-select .inner,
+#smart-cf-meta-box-condition-post .ios-ui-select .inner,
+#smart-cf-meta-box-condition-profile .ios-ui-select .inner,
+#smart-cf-meta-box-condition-taxonomy .ios-ui-select .inner,
+#smart-cf-meta-box-condition-options-page .ios-ui-select .inner {
+	width:12px;
+	height:12px;
+}
+
+.smart-cf-group .smart-cf-group-repeat label .ios-ui-select.checked .inner,
+#smart-cf-meta-box-condition-post .ios-ui-select.checked .inner,
+#smart-cf-meta-box-condition-profile .ios-ui-select.checked .inner,
+#smart-cf-meta-box-condition-taxonomy .ios-ui-select.checked .inner,
+#smart-cf-meta-box-condition-options-page .ios-ui-select.checked .inner {
+	left: 17px;
+}
+
 
 /** ==================================================
  * .hide
